feat(01): update coroutines examples